Added proper markup to the readme

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Rhybudd is a Zenoss Events & Device Management App for Android
--------------------------
+======
 Uses the new Zenoss 3.0 API to poll for, alert on and Acknowledge or delve into Zenoss alerts.
 
 Will also eventually work with PagerDuty to Acknowledge incidents before escalation as well as hook into various Hosting provider
@@ -8,8 +8,8 @@ control panels such as Amazon EC2, Rackspace and DediPower.
 The source code has been released under the GPL version 3 license.
 
 
-*Links*
--------------------------
-Email: Gareth@NetworksAreMadeOfString.co.uk
-GitHub: https://github.com/NetworksAreMadeOfString/Rhybudd
-Market URL: https://market.android.com/details?id=net.networksaremadeofstring.rhybudd
+Links
+--------
+* Email: Gareth@NetworksAreMadeOfString.co.uk
+* GitHub: https://github.com/NetworksAreMadeOfString/Rhybudd
+* Market URL: https://market.android.com/details?id=net.networksaremadeofstring.rhybudd
