Only alert for production servers
 - Feature request:
https://github.com/NetworksAreMadeOfString/Rhybudd/issues/4
 - Additional filtering to be added at a later stage

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="deviceListTitle">Infrastructure</string>
     <string name="eventListTitle">Events List</string>
     
+    <string name="productionStateNotificationLabel">Only raise alerts for Production devices</string>
     
     <string name="mangeDatabaseTitle">Manage Cache</string>
     <string name="mangeDatabaseDBSizeTitle">Current DB Size:</string>
