Fixes for production state and notification sounds
 - Improved logic for checking production states
 - Ability to enable / disable notification sounds

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="eventListTitle">Events List</string>
     
     <string name="productionStateNotificationLabel">Only raise alerts for Production devices</string>
+    <string name="notificationSoundLabel">Notification Sound</string>
     
     <string name="mangeDatabaseTitle">Manage Cache</string>
     <string name="mangeDatabaseDBSizeTitle">Current DB Size:</string>
