--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <string name="hello">Hello World, rhestr!</string>
     <string name="app_name">Rhybudd</string>
     <string name="Description">Rhybudd is a Zenoss Events and Device Management App for Android Uses the new Zenoss 3.0 API to poll for, alert on and Acknowledge or delve into Zenoss alerts.</string>
@@ -59,6 +59,14 @@
     <string name="eventDetailsEventCountLabel">Event Count:</string>
     <string name="eventDetailsAgentLabel">Agent:</string>
     <string name="eventDetailsLogLabel">Log:</string>
+    
+    <!-- Navigation -->
+    <string-array name="actionbar_nav">
+        <item>Devices</item>
+        <item>Search</item>
+        <item>Reports</item>
+        <item>Settings</item>
+    </string-array>
     
     <!-- Preferences -->
     <string-array name="entries_list_preference">
