--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -65,21 +65,28 @@
         <item>Devices</item>
         <item>Search</item>
         <item>Reports</item>
-        <item>Settings</item>
     </string-array>
     
     <!-- Preferences -->
-    <string-array name="entries_list_preference">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
+    <string-array name="BackgroundServiceDelay_preference">
+        <item>30 Seconds</item>
+        <item>1 Minute</item>
+        <item>2 Minutes</item>
+        <item>5 Minutes</item>
+        <item>10 Minutes</item>
+        <item>15 Minutes</item>
+        <item>30 Minutes</item>
+        <item>1 Hour</item>
     </string-array>
     
-    <string-array name="entryvalues_list_preference">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
+    <string-array name="BackgroundServiceDelay_preference_values">
+        <item>30</item>
+        <item>60</item>
+        <item>120</item>
+        <item>360</item>
+        <item>600</item>
+        <item>900</item>
+        <item>1800</item>
+        <item>3600</item>
     </string-array>
 </resources>
