--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -1,35 +1,35 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <string name="hello">"Ciao a tutti, rhestr!"</string>
+    <string name="hello">"Ciao a tutti!"</string>
     <string name="app_name">"Rhybudd"</string>
-    <string name="Description">"Rhybudd è un Zenoss Eventi e Gestione periferiche App per Android utilizza la nuova Zenoss 3,0 API per eseguire il polling per, e visualizzate su Conferma o approfondire gli avvisi Zenoss."</string>
-    <string name="widget_GraphTitle">"Conti correnti di eventi"</string>
-    <string name="AddtoLogButton">"Aggiungi a Registro"</string>
+    <string name="Description">"Rhybudd è un'applicazione di gestione eventi e periferiche Zenoss per Android. Utilizza la nuova API Zenoss 3.0 per eseguire il polling, gestire gli avvisi e per visualizzare o confermare gli avvisi Zenoss."</string>
+    <string name="widget_GraphTitle">"Numero eventi correnti"</string>
+    <string name="AddtoLogButton">"Aggiungi ai Log"</string>
     <string name="DefaultStatusMessageText">"Aggiornamento in corso..."</string>
     <string name="deviceListTitle">"Infrastruttura"</string>
     <string name="eventListTitle">"Elenco Eventi"</string>
     
-    <string name="productionStateNotificationLabel">"Solo alzare avvisi per i dispositivi di produzione"</string>
+    <string name="productionStateNotificationLabel">"Invia avvisi solo per i dispositivi live"</string>
     <string name="notificationSoundLabel">"Avviso sonoro"</string>
     
     <!-- Initial Settings -->
-    <string name="initialSettings">"Configurazione aggiuntive come sfondo ecc intervallo di polling può essere configurato in seguito"</string>
+    <string name="initialSettings">"Configurazioni aggiuntive, come sfondo, intervallo di polling, ecc. Può essere configurato in seguito"</string>
     
     <string name="mangeDatabaseTitle">"Gestione della cache"</string>
-    <string name="mangeDatabaseDBSizeTitle">"DB Dimensione attuale:"</string>
+    <string name="mangeDatabaseDBSizeTitle">"Dimensione attuale del DB:"</string>
     <string name="manageCache_RefreshTitle">"Aggiorna cache locale"</string>
-    <string name="refreshDesc">"La cache viene aggiornata ogni volta che carichi app quindi non c'è bisogno di forzare un aggiornamento."</string>
-    <string name="manageCache_moveToSDTitle">"Spostare app su scheda SD"</string>
-    <string name="moveToSDDesc">"A seconda delle dimensioni della vostra infrastruttura di questa cache può diventare piuttosto grande. Trasferirsi in SD è consigliabile."</string>
-    <string name="manageCache_emptyCacheTitle">"Empty cache locale"</string>
-    <string name="emptyCacheDesc">"La cache locale viene svuotata ogni volta che i carichi di app, ma lo si può lavare manualmente, se necessario."</string>
+    <string name="refreshDesc">"La cache viene aggiornata ogni volta che l'applicazione viene caricata, quindi non c'è bisogno di forzare un aggiornamento."</string>
+    <string name="manageCache_moveToSDTitle">"Spostare applicazione su scheda SD"</string>
+    <string name="moveToSDDesc">"A seconda delle dimensioni della vostra infrastruttura, questa cache può diventare piuttosto grande. Si consiglia di trasferirla su SD."</string>
+    <string name="manageCache_emptyCacheTitle">"Svuota la cache locale"</string>
+    <string name="emptyCacheDesc">"La cache locale viene svuotata ogni volta che l'applicazione viene caricata, ma la si può svuotare manualmente, se necessario."</string>
     
     
     <string name="homeMenu_Help">"Aiuto"</string>
     <string name="homeMenu_PagerDuty">"Pager Duty"</string>
     <string name="homeMenu_ManageDB">"Gestisci database"</string>
     <string name="homeMenu_Infrastructure">"Infrastruttura"</string>
-    <string name="homeMenu_Settings">"impostazioni"</string>
-    <string name="homeMenu_Refresh">"Rinfrescare"</string>
+    <string name="homeMenu_Settings">"Impostazioni"</string>
+    <string name="homeMenu_Refresh">"Aggiornare"</string>
     
     
     <string name="searchTitle">"Risultati di ricerca:"</string>
@@ -38,43 +38,43 @@
     <string name="searchButton">"Ricerca"</string>
     <string name="searchLabel">"Ricerca"</string>
     <string name="searchHintDevice">"Nome dispositivo"</string>
-    <string name="searchVoicePromptDevice">"Per ottenere i migliori risultati, utilizzare una breve parola sola, come il nome del dispositivo."</string>
+    <string name="searchVoicePromptDevice">"Per ottenere i migliori risultati, utilizzare solo una breve parola, come il nome del dispositivo."</string>
     
     <string name="deviceIDLabel">"ID dispositivo"</string>
     <string name="uptimeLabel">"Uptime"</string>
     <string name="deviceDetailsLastChange">"Ultimo Cambiamento"</string>
-    <string name="deviceDetailsModelTime">"Modello Tempo"</string>
+    <string name="deviceDetailsModelTime">"Ultima analisi Sistema Operativo"</string>
     <string name="deviceDetailsMemorySwap">"Memoria / Swap"</string>
-    <string name="deviceDetailsTitle">"Di dispositivo"</string>
-    <string name="deviceDetailsOSModelLabel">"OS Modeling:"</string>
+    <string name="deviceDetailsTitle">"Dettagli dispositivo"</string>
+    <string name="deviceDetailsOSModelLabel">"Analisi Sistema Operativo:"</string>
     <string name="deviceDetailsGroupsLabel">"Gruppi"</string>
-    <string name="deviceDetailsSystemsLabel">"Systems:"</string>
+    <string name="deviceDetailsSystemsLabel">"Sistemi:"</string>
     <string name="deviceDetailsUptimeLabel">"Uptime:"</string>
-    <string name="deviceDetailsProductionStateLabel">"Produzione di Stato:"</string>
+    <string name="deviceDetailsProductionStateLabel">"Stato sistema in Produzione:"</string>
     <string name="empty">""</string>
-    <string name="deviceDetailsSNMPLocation">"Posizione SNMP"</string>
-    <string name="deviceDetailsSNMPContact">"SNMP Contatto"</string>
-    <string name="deviceDetailsEventsTitle">"Events (Eventi)"</string>
+    <string name="deviceDetailsSNMPLocation">"Indirizzo SNMP"</string>
+    <string name="deviceDetailsSNMPContact">"Contatto SNMP"</string>
+    <string name="deviceDetailsEventsTitle">"Eventi"</string>
     
-    <string name="eventDetailsTitle">"Dettagli sull' evento"</string>
+    <string name="eventDetailsTitle">"Dettagli evento"</string>
     <string name="eventDetailsComponentLabel">"Componente"</string>
     <string name="eventDetailsEventClassLabel">"Classe di evento:"</string>
-    <string name="eventDetailsSummaryLabel">"Riassunto"</string>
-    <string name="eventDetailsFirstSeenLabel">"First seen:"</string>
-    <string name="eventDetailslastSeenLabel">"Ultimo Click:"</string>
+    <string name="eventDetailsSummaryLabel">"Sommario"</string>
+    <string name="eventDetailsFirstSeenLabel">"Prima occorrenza:"</string>
+    <string name="eventDetailslastSeenLabel">"Ultima occorrenza:"</string>
     
-    <string name="eventDetailsEventCountLabel">"Event Count:"</string>
+    <string name="eventDetailsEventCountLabel">"Numero Eventi:"</string>
     <string name="eventDetailsAgentLabel">"Agente:"</string>
-    <string name="eventDetailsLogLabel">"Entra"</string>
+    <string name="eventDetailsLogLabel">"Log:"</string>
     
     <!-- DeviceList -->
-    <string name="deviceListServerCount">"Calcolo il numero dei server ..."</string>
+    <string name="deviceListServerCount">"Conteggio dei server in corso..."</string>
     <string name="deviceListIconDesc">"Immagine raffigurante 3 server su una rete"</string>
     
     <!-- Manage Database -->
-    <string name="mgeDBRefreshDesc">"Immagine raffigurante il rinfrescante della cache locale"</string>
+    <string name="mgeDBRefreshDesc">"Immagine raffigurante lo svuotamento della cache locale"</string>
     <string name="mgeDBSDCard">"Immagine raffigurante una scheda SD"</string>
-    <string name="mgeDBBin">"Immagine raffigurante un bidone riempita"</string>
+    <string name="mgeDBBin">"Immagine raffigurante un cestino pieno"</string>
     
     <!-- Rhybudd Home -->
     <string name="homeLogos">"Immagine che mostra il logo Zenoss e Android"</string>
@@ -83,16 +83,16 @@
     <string-array name="actionbar_nav">
         <item>"Dispositivi"</item>
         <item>"Ricerca"</item>
-        <item>"Rapporti"</item>
+        <item>"Report"</item>
     </string-array>
     
     <!-- Initial Settings -->
-    <string name="SaveSettingsButton">"Salva impostazioni &amp;amp; Login"</string>
-    <string name="UserNameHint">"Zenoss Nome Utente"</string>
-    <string name="PasswordHint">"Zenoss password"</string>
-    <string name="EnableHTTPAuthCheck">"Abilita autenticazione di base HTTP"</string>
-    <string name="HTTPAuthUserNameHint">"Autenticazione di base HTTP User"</string>
-    <string name="HTTPAuthPasswordHint">"Autenticazione di base HTTP password"</string>
+    <string name="SaveSettingsButton">"Salva impostazioni e Accedi"</string>
+    <string name="UserNameHint">"Nome Utente Zenoss"</string>
+    <string name="PasswordHint">"Password Zenoss"</string>
+    <string name="EnableHTTPAuthCheck">"Abilita autenticazione HTTP di base "</string>
+    <string name="HTTPAuthUserNameHint">"Nome utente per Autenticazione HTTP di base "</string>
+    <string name="HTTPAuthPasswordHint">"Password per Autenticazione HTTP di base"</string>
     
     <!-- Preferences -->
     <string-array name="BackgroundServiceDelay_preference">
